// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/UINTEGER.proto";
import "../ccsds_mal/ULONG.proto";


package pusModelEditor.protobuf;

message PusMmePacketParameter {
extensions 10 to 110;

  optional ccsds_mal.protobuf.UINTEGER parameterId = 1;
  optional ccsds_mal.protobuf.STRING parameterName = 2;
  optional ccsds_mal.protobuf.UINTEGER parameterOrder = 3;
  optional ccsds_mal.protobuf.STRING parameterFilteredStatus = 4;
  optional ccsds_mal.protobuf.ULONG uniqueId = 5;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeStoreId = 6;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeStoreId = 7;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeFilteredStatus = 8;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeFilteredStatus = 9;
}
